made a new function for search

--- a/src/Interactive-1.ipynb
+++ b/src/Interactive-1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,37 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.client.collections.delete_all()\n",
-    "c.init_schemas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w = c.client.collections.list_all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "_CollectionConfigSimple(name='Author', description=None, generative_config=_GenerativeConfig(generative=<GenerativeSearches.OPENAI: 'generative-openai'>, model={}), properties=[_Property(name='name', description=None, data_type=<DataType.TEXT: 'text'>, index_filterable=True, index_searchable=True, nested_properties=None, tokenization=<Tokenization.WORD: 'word'>, vectorizer_config=_PropertyVectorizerConfig(skip=False, vectorize_property_name=True), vectorizer='text2vec-openai')], references=[_ReferenceProperty(name='hasPaper', description=None, target_collections=['Paper']), _ReferenceProperty(name='linkPrediction', description=None, target_collections=['Author'])], reranker_config=None, vectorizer_config=_VectorizerConfig(vectorizer=<Vectorizers.TEXT2VEC_OPENAI: 'text2vec-openai'>, model={'baseURL': 'https://api.openai.com', 'model': 'ada'}, vectorize_collection_name=True), vectorizer=<Vectorizers.TEXT2VEC_OPENAI: 'text2vec-openai'>)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "w[\"Author\"]"
+    "# c.client.collections.delete_all()\n",
+    "# c.init_schemas()"
    ]
   },
   {
@@ -1879,26 +1850,27 @@
     }
    ],
    "source": [
-    "c.ingest_data(\"/home/cesarruiz/Projects/Lammps_agent/test/tei.xml\")"
+    "# c.ingest_data(\"/home/cesarruiz/Projects/Lammps_agent/test/tei.xml\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = c.client.collections.get(\"Author\")\n",
-    "p = c.client.collections.get(\"Paper\")"
+    "p = c.client.collections.get(\"Paper\")\n",
+    "t = c.client.collections.get(\"TextSectionTemporal\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = a.query.hybrid(\n",
+    "response = t.query.hybrid(\n",
     "      query=\"Mathematician\",\n",
     "      alpha=0.5,\n",
     "      return_metadata=wvc.query.MetadataQuery(score=True, explain_score=True),\n",
@@ -1914,11 +1886,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "paper_res = p.query.bm25(\n",
+    "paper_res = t.query.bm25(\n",
     "      query=\"China\",\n",
     "      return_metadata=wvc.query.MetadataQuery(score=True, explain_score=True),\n",
     "      limit=5,\n",
@@ -1927,230 +1899,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Object(uuid=_WeaviateUUIDInt('2493e749-bc4a-4353-a0e5-3f4bdd9a8b62'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=None, explain_score=None, is_consistent=None, rerank_score=None), properties={'title': 'Changing travel patterns in China during the early stages of the COVID-19 pandemic'}, references=None, vector={}, collection='Paper')\n",
-      "Object(uuid=_WeaviateUUIDInt('2493e749-bc4a-4353-a0e5-3f4bdd9a8b62'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=None, explain_score=None, is_consistent=None, rerank_score=None), properties={'title': 'Changing travel patterns in China during the early stages of the COVID-19 pandemic'}, references=None, vector={}, collection='Paper')\n",
-      "Object(uuid=_WeaviateUUIDInt('2493e749-bc4a-4353-a0e5-3f4bdd9a8b62'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=None, explain_score=None, is_consistent=None, rerank_score=None), properties={'title': 'Changing travel patterns in China during the early stages of the COVID-19 pandemic'}, references=None, vector={}, collection='Paper')\n",
-      "Object(uuid=_WeaviateUUIDInt('2493e749-bc4a-4353-a0e5-3f4bdd9a8b62'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=None, explain_score=None, is_consistent=None, rerank_score=None), properties={'title': 'Changing travel patterns in China during the early stages of the COVID-19 pandemic'}, references=None, vector={}, collection='Paper')\n",
-      "Object(uuid=_WeaviateUUIDInt('2493e749-bc4a-4353-a0e5-3f4bdd9a8b62'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=None, explain_score=None, is_consistent=None, rerank_score=None), properties={'title': 'Changing travel patterns in China during the early stages of the COVID-19 pandemic'}, references=None, vector={}, collection='Paper')\n"
+      "Object(uuid=_WeaviateUUIDInt('6d76ed95-a86d-4b1b-8e32-2be8c230ec4e'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=0.5, explain_score='\\nHybrid (Result Set vector) Document 6d76ed95-a86d-4b1b-8e32-2be8c230ec4e: original score 0.76885253, normalized score: 0.5', is_consistent=None, rerank_score=None), properties={'name': 'RESULTS', 'text': 'We used two variability metrics to investigate potential outbound travel surges: (1) a proportion-based matric, Eq.'}, references={'hasPaper': <weaviate.collections.classes.internal._CrossReference object at 0x7f9c85ed8510>}, vector={}, collection='TextSectionTemporal')\n",
+      "Object(uuid=_WeaviateUUIDInt('892c8a8e-58c8-4df5-9cc9-b067f7cb6459'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=0.4558413028717041, explain_score='\\nHybrid (Result Set vector) Document 892c8a8e-58c8-4df5-9cc9-b067f7cb6459: original score 0.76582503, normalized score: 0.4558413', is_consistent=None, rerank_score=None), properties={'text': 'We further processed these data to produce symmetrical matrices of daily travel between all Chinese prefectures.', 'name': 'METHODS'}, references={'hasPaper': <weaviate.collections.classes.internal._CrossReference object at 0x7f9cb641bad0>}, vector={}, collection='TextSectionTemporal')\n",
+      "Object(uuid=_WeaviateUUIDInt('94bdb704-4f04-4109-a781-22f4f21694f2'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=0.3564862310886383, explain_score='\\nHybrid (Result Set vector) Document 94bdb704-4f04-4109-a781-22f4f21694f2: original score 0.7590133, normalized score: 0.35648623', is_consistent=None, rerank_score=None), properties={'text': 'To determine how the relationship between distance and travel flow changed over Chunyun and in response to the cordon sanitaire, we calculated the frequency of journeys of at least distance n kilometres, for n up to the maximum distance 4185 km, on each day of the study period.', 'name': 'METHODS'}, references={'hasPaper': <weaviate.collections.classes.internal._CrossReference object at 0x7f9cad641950>}, vector={}, collection='TextSectionTemporal')\n",
+      "Object(uuid=_WeaviateUUIDInt('56459485-f339-4070-bbcc-03e7ff33b859'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=0.3503657579421997, explain_score='\\nHybrid (Result Set vector) Document 56459485-f339-4070-bbcc-03e7ff33b859: original score 0.7585937, normalized score: 0.35036576', is_consistent=None, rerank_score=None), properties={'name': 'METHODS', 'text': 'The Leiden algorithm maximises the modularity, Q, on directed, weighted, time sliced NATURE COMMUNICATIONS | ARTICLE networks with an inter-slice weighting of 10 −5 , which is the order of magnitude of minimum intra-slice weight across all times 42 .'}, references={'hasPaper': <weaviate.collections.classes.internal._CrossReference object at 0x7f9c85d0f090>}, vector={}, collection='TextSectionTemporal')\n",
+      "Object(uuid=_WeaviateUUIDInt('b28608cc-21d3-45b1-b14b-7a66d11fe1ae'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=0.32490840554237366, explain_score='\\nHybrid (Result Set vector) Document b28608cc-21d3-45b1-b14b-7a66d11fe1ae: original score 0.75684834, normalized score: 0.3249084', is_consistent=None, rerank_score=None), properties={'text': 'Using data from Baidu Huiyan, we created a symmetric, 366 × 366 connectivity matrix for each day between 1 January 2020 and 1 Mar 2020 (61 days).', 'name': 'METHODS'}, references={'hasPaper': <weaviate.collections.classes.internal._CrossReference object at 0x7f9c85efb790>}, vector={}, collection='TextSectionTemporal')\n"
      ]
     }
    ],
    "source": [
     "for i in response.objects:\n",
-    "    for e in i.references[\"hasPaper\"].objects:\n",
-    "        print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Object(uuid=_WeaviateUUIDInt('2493e749-bc4a-4353-a0e5-3f4bdd9a8b62'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=0.13470062613487244, explain_score=', BM25F_china_frequency:1, BM25F_china_propLength:13', is_consistent=None, rerank_score=None), properties={'title': 'Changing travel patterns in China during the early stages of the COVID-19 pandemic', 'publicationDate': None, 'affiliation': 'Department of Infectious Disease Epidemiology, School of Hygiene and Tropical Medicine; Centre for Mathematical Modelling of Infectious Diseases, School of Hygiene and Tropical Medicine'}, references=None, vector={}, collection='Paper')\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in paper_res.objects:\n",
     "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_id = paper_res.objects[0].uuid\n",
-    "a_id = response.objects[0].uuid"
+    "t1_id = response.objects[0].uuid\n",
+    "t2_id =  response.objects[1].uuid\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ObjectSingleReturn(uuid=_WeaviateUUIDInt('2493e749-bc4a-4353-a0e5-3f4bdd9a8b62'), metadata=MetadataSingleObjectReturn(creation_time=datetime.datetime(2024, 4, 4, 16, 1, 1, 410000, tzinfo=datetime.timezone.utc), last_update_time=datetime.datetime(2024, 4, 4, 16, 1, 11, 126000, tzinfo=datetime.timezone.utc), is_consistent=None), properties={'title': 'Changing travel patterns in China during the early stages of the COVID-19 pandemic', 'affiliation': 'Department of Infectious Disease Epidemiology, School of Hygiene and Tropical Medicine; Centre for Mathematical Modelling of Infectious Diseases, School of Hygiene and Tropical Medicine', 'publicationDate': None}, references=None, vector={}, collection='Paper')\n",
-      "ObjectSingleReturn(uuid=_WeaviateUUIDInt('7e617820-eeff-4a7f-b9da-690c14210f17'), metadata=MetadataSingleObjectReturn(creation_time=datetime.datetime(2024, 4, 4, 16, 1, 7, 971000, tzinfo=datetime.timezone.utc), last_update_time=datetime.datetime(2024, 4, 4, 16, 20, 25, 165000, tzinfo=datetime.timezone.utc), is_consistent=None), properties={'name': 'Diamond, Charlie', 'affiliation': 'Department of Infectious Disease Epidemiology, School of Hygiene and Tropical Medicine; Centre for Mathematical Modelling of Infectious Diseases, School of Hygiene and Tropical Medicine'}, references={'hasPaper': <weaviate.collections.classes.internal._CrossReference object at 0x7f5973554d10>}, vector={}, collection='Author')\n"
+     "ename": "KeyError",
+     "evalue": "'hasAuthor'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m response\u001b[38;5;241m.\u001b[39mobjects[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mreferences[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhasAuthor\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mobjects\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'hasAuthor'"
      ]
     }
    ],
    "source": [
-    "paper_obj = p.query.fetch_object_by_id(p_id)\n",
-    "author_obj = a.query.fetch_object_by_id(a_id)\n",
-    "a.data.reference_replace(\n",
-    "        from_uuid=a_id,\n",
-    "        from_property=\"hasPaper\",\n",
-    "        to=p_id\n",
-    "    )\n",
-    "print(paper_obj)\n",
-    "\n",
-    "paper_obj = a.query.fetch_object_by_id(\n",
-    "            a_id,\n",
-    "            return_references=[\n",
-    "                wvc.query.QueryReference(\n",
-    "                link_on=\"hasPaper\",\n",
-    "                return_properties=[\"title\"]\n",
-    "                )],)\n",
-    "print(paper_obj)"
+    "response.objects[0].references[\"hasAuthor\"].objects"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<weaviate.collections.collection.Collection at 0x7fe16d17cbd0>"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import weaviate.classes as wvc\n",
-    "\n",
-    "c.client.collections.create(\n",
-    "        name=\"JeopardyQuestion\",\n",
-    "        description=\"A Jeopardy! question\",\n",
-    "        properties=[\n",
-    "            wvc.config.Property(name=\"question\", data_type=wvc.config.DataType.TEXT),\n",
-    "            wvc.config.Property(name=\"answer\", data_type=wvc.config.DataType.TEXT),\n",
-    "        ],\n",
-    "        references=[\n",
-    "            wvc.config.ReferenceProperty(\n",
-    "                name=\"hasCategory\",\n",
-    "                target_collection=\"Paper\"\n",
-    "            )\n",
-    "        ]\n",
-    "\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "UUID('e386af57-64de-463e-8168-fc88542844fa')"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# category = c.client.collections.get(\"JeopardyQuestion\")\n",
-    "#     # category.config.add_reference(\n",
-    "# category.config.add_reference(\n",
-    "#         wvc.config.ReferenceProperty(\n",
-    "#             name=\"hasCategory\",\n",
-    "#             target_collection=\"Paper\"\n",
-    "#         )\n",
-    "#     )\n",
-    "\n",
-    "questions = c.client.collections.get(\"JeopardyQuestion\")\n",
-    "ui = uuid.uuid4()\n",
-    "questions.data.insert(\n",
-    "    properties={},  # A dictionary with the properties of the object\n",
-    "    uuid=ui,  # A UUID for the object\n",
-    "    references={\"hasCategory\": p_id},  # e.g. {\"hasCategory\": \"583876f3-e293-5b5b-9839-03f455f14575\"}\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ObjectSingleReturn(uuid=_WeaviateUUIDInt('e386af57-64de-463e-8168-fc88542844fa'), metadata=MetadataSingleObjectReturn(creation_time=datetime.datetime(2024, 4, 4, 15, 48, 17, 333000, tzinfo=datetime.timezone.utc), last_update_time=datetime.datetime(2024, 4, 4, 15, 48, 17, 333000, tzinfo=datetime.timezone.utc), is_consistent=None), properties={'answer': None, 'question': None}, references=None, vector={}, collection='JeopardyQuestion')"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "questions.query.fetch_object_by_id(ui)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cesar_uuid = uuid.uuid4()\n",
-    "cesar = a.data.insert(\n",
-    "        properties={\"\": \"Cesar\"},  # A dictionary with the properties of the object\n",
-    "        uuid=cesar_uuid,  # A UUID for the object\n",
-    "        references={\"sPaper\": p_id},  # e.g. {\"hasCategory\": \"583876f3-e293-5b5b-9839-03f455f14575\"}\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ObjectSingleReturn(uuid=_WeaviateUUIDInt('ae6f5b60-90b8-4d08-9a01-68949ba62651'), metadata=MetadataSingleObjectReturn(creation_time=datetime.datetime(2024, 4, 4, 15, 43, 17, 9000, tzinfo=datetime.timezone.utc), last_update_time=datetime.datetime(2024, 4, 4, 15, 43, 17, 9000, tzinfo=datetime.timezone.utc), is_consistent=None), properties={'nae': 'Cesar', 'affiliation': None, 'name': None}, references=None, vector={}, collection='Author')"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.query.fetch_object_by_id(cesar)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from context_search import WeaviateContextSearch\n",
     "\n",
-    "import weaviate\n",
-    "client = weaviate.Client(\"http://localhost:8080\")\n",
-    "client.data_object.reference.add(\n",
-    "    from_class_name=\"Author\",\n",
-    "    from_uuid=a_id,\n",
-    "    from_property_name=\"hasPaper\",\n",
-    "    to_class_name=\"Paper\",\n",
-    "    to_uuid=p_id,\n",
-    ")"
+    "\n",
+    "context = WeaviateContextSearch(c.client)"
    ]
   },
   {
@@ -2158,7 +1967,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "context.jaccard_score_with_decay()"
+   ]
   }
  ],
  "metadata": {
