added modules  and correctly implemented the context_search.

--- a/src/Interactive-1.ipynb
+++ b/src/Interactive-1.ipynb
@@ -11,11 +11,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GROBID server is up and running\n"
+     ]
+    }
+   ],
+   "source": [
+    "from api.grobid_client_python.grobid_client.grobid_client import GrobidClient\n",
+    "\n",
+    "client = GrobidClient(config_path=\"/home/cesar/Projects/Lammps_agent/test/grobib_config.json\")\n",
+    "client.process(service=\"processFulltextDocument\", input_path=\"/home/cesar/Projects/Lammps_agent/test/\",output= \"/home/cesar/Projects/Lammps_agent/test/a.tei\" ,n=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from weaviate_database import Client\n",
+    "\n",
     "import weaviate\n",
     "from weaviate.classes.config import Property, DataType, ReferenceProperty\n",
     "import weaviate.classes as wvc\n",
@@ -29,13 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_APIKEY\"] = \"\"\n",
-    "os.environ[\"YOUR_WCS_URL\"] =   \"\"\n",
-    "os.environ[\"YOUR_WCS_API_KEY\"] = \"\"\n",
+    "\n",
     "c = Client()\n"
    ]
   },
@@ -1855,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1886,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1899,24 +1918,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Object(uuid=_WeaviateUUIDInt('6d76ed95-a86d-4b1b-8e32-2be8c230ec4e'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=0.5, explain_score='\\nHybrid (Result Set vector) Document 6d76ed95-a86d-4b1b-8e32-2be8c230ec4e: original score 0.76885253, normalized score: 0.5', is_consistent=None, rerank_score=None), properties={'name': 'RESULTS', 'text': 'We used two variability metrics to investigate potential outbound travel surges: (1) a proportion-based matric, Eq.'}, references={'hasPaper': <weaviate.collections.classes.internal._CrossReference object at 0x7f9c85ed8510>}, vector={}, collection='TextSectionTemporal')\n",
-      "Object(uuid=_WeaviateUUIDInt('892c8a8e-58c8-4df5-9cc9-b067f7cb6459'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=0.4558413028717041, explain_score='\\nHybrid (Result Set vector) Document 892c8a8e-58c8-4df5-9cc9-b067f7cb6459: original score 0.76582503, normalized score: 0.4558413', is_consistent=None, rerank_score=None), properties={'text': 'We further processed these data to produce symmetrical matrices of daily travel between all Chinese prefectures.', 'name': 'METHODS'}, references={'hasPaper': <weaviate.collections.classes.internal._CrossReference object at 0x7f9cb641bad0>}, vector={}, collection='TextSectionTemporal')\n",
-      "Object(uuid=_WeaviateUUIDInt('94bdb704-4f04-4109-a781-22f4f21694f2'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=0.3564862310886383, explain_score='\\nHybrid (Result Set vector) Document 94bdb704-4f04-4109-a781-22f4f21694f2: original score 0.7590133, normalized score: 0.35648623', is_consistent=None, rerank_score=None), properties={'text': 'To determine how the relationship between distance and travel flow changed over Chunyun and in response to the cordon sanitaire, we calculated the frequency of journeys of at least distance n kilometres, for n up to the maximum distance 4185 km, on each day of the study period.', 'name': 'METHODS'}, references={'hasPaper': <weaviate.collections.classes.internal._CrossReference object at 0x7f9cad641950>}, vector={}, collection='TextSectionTemporal')\n",
-      "Object(uuid=_WeaviateUUIDInt('56459485-f339-4070-bbcc-03e7ff33b859'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=0.3503657579421997, explain_score='\\nHybrid (Result Set vector) Document 56459485-f339-4070-bbcc-03e7ff33b859: original score 0.7585937, normalized score: 0.35036576', is_consistent=None, rerank_score=None), properties={'name': 'METHODS', 'text': 'The Leiden algorithm maximises the modularity, Q, on directed, weighted, time sliced NATURE COMMUNICATIONS | ARTICLE networks with an inter-slice weighting of 10 −5 , which is the order of magnitude of minimum intra-slice weight across all times 42 .'}, references={'hasPaper': <weaviate.collections.classes.internal._CrossReference object at 0x7f9c85d0f090>}, vector={}, collection='TextSectionTemporal')\n",
-      "Object(uuid=_WeaviateUUIDInt('b28608cc-21d3-45b1-b14b-7a66d11fe1ae'), metadata=MetadataReturn(creation_time=None, last_update_time=None, distance=None, certainty=None, score=0.32490840554237366, explain_score='\\nHybrid (Result Set vector) Document b28608cc-21d3-45b1-b14b-7a66d11fe1ae: original score 0.75684834, normalized score: 0.3249084', is_consistent=None, rerank_score=None), properties={'text': 'Using data from Baidu Huiyan, we created a symmetric, 366 × 366 connectivity matrix for each day between 1 January 2020 and 1 Mar 2020 (61 days).', 'name': 'METHODS'}, references={'hasPaper': <weaviate.collections.classes.internal._CrossReference object at 0x7f9c85efb790>}, vector={}, collection='TextSectionTemporal')\n"
+      "{'text': 'We used two variability metrics to investigate potential outbound travel surges: (1) a proportion-based matric, Eq.', 'name': 'RESULTS'}\n",
+      "{'text': 'We further processed these data to produce symmetrical matrices of daily travel between all Chinese prefectures.', 'name': 'METHODS'}\n",
+      "{'text': 'To determine how the relationship between distance and travel flow changed over Chunyun and in response to the cordon sanitaire, we calculated the frequency of journeys of at least distance n kilometres, for n up to the maximum distance 4185 km, on each day of the study period.', 'name': 'METHODS'}\n",
+      "{'text': 'The Leiden algorithm maximises the modularity, Q, on directed, weighted, time sliced NATURE COMMUNICATIONS | ARTICLE networks with an inter-slice weighting of 10 −5 , which is the order of magnitude of minimum intra-slice weight across all times 42 .', 'name': 'METHODS'}\n",
+      "{'text': 'Using data from Baidu Huiyan, we created a symmetric, 366 × 366 connectivity matrix for each day between 1 January 2020 and 1 Mar 2020 (61 days).', 'name': 'METHODS'}\n"
      ]
     }
    ],
    "source": [
     "for i in response.objects:\n",
-    "    print(i)"
+    "    print(i.properties)"
    ]
   },
   {
@@ -1988,7 +2007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
